# vision-benchmarks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agent/plans/: issue_10_plan.md  issue_10_revised_plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_accuracy.py  benchmark_webcam.py  benchmark_yolo.py
configs/: README.md
results/: webcam_latency_results.md  yolo_accuracy_results.md  yolo_speed_results.md
scripts/: verify_env.py
tests/: README.md  __init__.py  conftest.py  test_benchmarks.py  test_infrastructure.py
tutorials/: README.md  setup_linux.md
utils/: export_trt.py
